--- a/index.html
+++ b/index.html
@@ -48,22 +48,13 @@
         </section>
         <section class="text">
             <p class="first-paragraph">
-                Soon the freeCodeCamp curriculum will be 100% project-driven learning. Instead of a series of coding
-                challenges, you'll learn through building projects - step by step. Before we get into the details, let
-                me emphasize: we are not changing the certifications. All 6 certifications will still have the same 5
-                required projects. We are only changing the optional coding challenges.
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit. Impedit adipisci temporibus maiores explicabo ut nesciunt numquam dolores repudiandae rem excepturi illum quo modi quod, aliquam tenetur nam fugit veritatis, sequi eius! Laborum dolores deleniti aliquid. Earum repudiandae fugit odit magnam laborum, tempore ipsa quibusdam tempora iste recusandae maxime saepe. Tempora commodi porro consequuntur veniam dolores dolor consequatur esse ullam aspernatur eos quasi maiores aperiam sit molestiae molestias quas reiciendis nostrum ad dolore, autem culpa, minus ea necessitatibus ipsa. Molestias officia, eaque, adipisci nisi minus accusamus perferendis labore porro magnam nam reprehenderit. Et, a? Quas tempora eveniet distinctio quo quidem voluptas sapiente vero explicabo voluptates rerum at veritatis aut obcaecati, corrupti amet voluptatem necessitatibus aliquam. Architecto cumque maiores optio voluptates, vel aspernatur eum qui minima maxime placeat non quaerat quod mollitia ab repudiandae quisquam ipsa expedita possimus. Numquam tempora tenetur eius, quaerat voluptatem quibusdam expedita saepe ad porro corrupti asperiores sunt doloremque voluptate deserunt. Dolores minus quisquam blanditiis veritatis atque reiciendis quidem quasi cum fugiat ad odio saepe ut molestias iure laboriosam odit amet quam, maiores quaerat. Dolores, vitae. Ipsum impedit assumenda architecto rem ut quas corrupti nostrum aperiam inventore maxime sapiente, reiciendis odit quibusdam odio quis quisquam. Aliquid perferendis esse harum possimus natus facilis dignissimos porro voluptatibus hic optio quasi delectus suscipit, reiciendis atque pariatur fugiat ullam aut! Impedit ex esse tempora, deleniti dolor rem voluptatem voluptatibus laborum sed aperiam quisquam sapiente facilis aliquid nihil nesciunt eum! Animi velit, magnam distinctio cupiditate saepe nemo labore nihil deleniti obcaecati accusantium molestias provident, rem a cumque ipsa officia debitis laboriosam maxime fugiat eum odio reiciendis incidunt facere quod. Tenetur a perspiciatis sed odio! Iure minima et blanditiis laborum pariatur dolore repellendus id quisquam nam earum officiis saepe quia corporis dolorem, expedita quasi aperiam nihil ab consequuntur est autem obcaecati. Odio, necessitatibus ab nobis, est aut perspiciatis atque quae dolore animi accusantium expedita, ducimus sint sapiente. In officia, porro tempora fugiat eum pariatur esse incidunt neque accusamus amet excepturi veritatis recusandae dolore quae quos maiores sequi quas quod labore tenetur eaque modi? Nihil labore itaque temporibus dolorem minus dicta veritatis reiciendis culpa repudiandae consequuntur quidem fugiat eum, molestiae at, distinctio excepturi. Nobis eius commodi perspiciatis blanditiis itaque quo a amet, aperiam expedita eos similique sapiente, voluptatem quis.
             </p>
             <p>
-                After years - years - of pondering these two problems and how to solve them, I slipped, hit my head on
-                the sink, and when I came to I had a revelation! A vision! A picture in my head! A picture of this! This
-                is what makes time travel possible: the flux capacitor!
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Quaerat fugit hic molestiae qui tempora dolor! Facere ratione ullam, molestiae ab eligendi consequatur laudantium ipsa qui nam illo aliquam velit nobis nulla eius veritatis. Id, cum suscipit explicabo voluptatem praesentium amet nihil illum, ex odit magnam quae pariatur dicta eos facilis deserunt reprehenderit fugiat beatae adipisci! Explicabo reprehenderit nemo totam laborum voluptas. Nesciunt dolores eaque eligendi veniam deleniti quam, expedita qui. Illo omnis illum vitae. Eligendi exercitationem excepturi at reiciendis quidem voluptatum ex inventore iure porro sint iusto officiis, ducimus pariatur expedita totam vel iste ea quisquam? Sed obcaecati laudantium fuga.
             </p>
             <p>
-                It wasn't as dramatic as Doc's revelation in Back to the Future. It
-                just occurred to me while I was going for a run. The revelation: the entire curriculum should be a
-                series of projects. Instead of individual coding challenges, we'll just have projects, each with their
-                own seamless series of tests. Each test gives you just enough information to figure out how to get it to
-                pass. (And you can view hints if that isn't enough.)
+                Lorem ipsum, dolor sit amet consectetur adipisicing elit. Inventore porro, ab officia aspernatur magni, totam quod corrupti reiciendis, cum ducimus quo commodi deleniti asperiores minima incidunt natus! Quia nesciunt sit exercitationem veniam dignissimos atque, tenetur quam omnis iusto et quae. 
             </p>
             <blockquote>
                 <hr />
@@ -73,24 +64,13 @@
                 <hr />
             </blockquote>
             <p>
-                No more walls of explanatory text. No more walls of tests. Just one
-                test at a time, as you build up a working project. Over the course of passing thousands of tests, you
-                build up projects and your own understanding of coding fundamentals. There is no transition between
-                lessons and projects, because the lessons themselves are baked into projects. And there's plenty of
-                repetition to help you retain everything because - hey - building projects in real life has plenty of
-                repetition.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Corrupti deserunt modi asperiores. Ratione voluptate explicabo ea perferendis quo. Impedit dolor fuga explicabo quae inventore voluptates quidem numquam, repellat, alias, nihil sint excepturi. Deleniti dicta error illo corrupti vitae unde at iste. Laudantium aperiam corporis tempore saepe, illo, dicta doloremque quos vero optio veritatis totam nesciunt officia in laborum officiis libero aut dolor. Esse facere sit, sunt earum quasi qui accusamus accusantium deleniti dignissimos? Ut, quas? Qui soluta at, aliquid assumenda minus eius explicabo accusamus nobis molestias voluptate unde! Quam, nulla!
             </p>
             <p>
-                The main design challenge is taking what is currently paragraphs of explanation and instructions and
-                packing them into a single test description text. Each project will involve dozens of tests like this.
-                People will be coding the entire time, rather than switching back and forth from "reading mode" to
-                "coding mode".
+                Lorem ipsum dolor sit amet consectetur adipisicing elit. Asperiores tempore velit numquam ab commodi aspernatur nam culpa ipsum dolor nemo consequatur voluptatem earum eveniet amet aliquam veritatis similique ut eius, itaque dolore? Sapiente dolore, nostrum aliquam exercitationem eaque ratione voluptatum quis quasi molestiae, dolor, facere et explicabo rem nisi eum?
             </p>
             <p>
-                Instead of a series of coding challenges, people will be in their code editor passing one test after
-                another, quickly building up a project. People will get into a real flow state, similar to what they
-                experience when they build the required projects at the end of each certification. They'll get that
-                sense of forward progress right from the beginning. And freeCodeCamp will be a much smoother experience.
+                Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum, quam asperiores aliquid hic soluta nostrum vel consectetur accusamus saepe reprehenderit qui molestiae dolores ipsum, dicta, perferendis placeat quis itaque eveniet rem error deleniti laboriosam! Perferendis ipsa maxime molestiae atque quibusdam cumque impedit, iste ipsam modi minus, voluptatum id repellendus repudiandae deserunt voluptate ab dicta incidunt ratione esse assumenda sint? Suscipit dolorem voluptate, a ab incidunt doloribus ut quasi velit similique.
             </p>
         </section>                  
     </main>
